# Grimoire

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  conanfile.py
.cache/clangd/index/: main.cpp.1A6C8BF58689340B.idx  main.cpp.CA26E0E673231EE4.idx  placeholder.cpp.8261C599E2693CB1.idx
apps/terminal/: CMakeLists.txt  main.cpp
apps/virtual_cam/: CMakeLists.txt  main.cpp
cmake/: ClangTidy.cmake  CompilerWarnings.cmake
libs/core/: CMakeLists.txt
libs/core/include/grimoire/interfaces/: i_ascii_converter.hpp  i_frame_processor.hpp  i_frame_source.hpp  i_output_writter.hpp
libs/core/include/grimoire/pipeline/: pipeline.hpp
libs/core/include/grimoire/types/: ascii_frame.hpp  frame.hpp
libs/core/src/: opencv_frame_source.cpp  opencv_frame_source.hpp
libs/core/src/interfaces/: i_ascii_converter.cpp  i_frame_processor.cpp  i_frame_source.cpp  i_output_writter.cpp
libs/core/src/pipeline/: pipeline.cpp
profiles/: linux-debug  linux-release  readme.md
